--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <!--
 		** Idea By: Kirolos Mahfouz
 		** Designed By: Kirolos Mahfouz
-		** Frontend By: Kirolos Mahfouz -->
+		** Frontend By: Kirolos Mahfouz
+-->
 <!-- 
 
 	Version 2:
@@ -342,6 +343,12 @@
 
 		<!-- End Slider Controls -->
 	</div>
+
+<!--
+		** Idea By: Kirolos Mahfouz
+		** Designed By: Kirolos Mahfouz
+		** Frontend By: Kirolos Mahfouz
+-->
 
 	<script src="js/smooth-scrollbar.js"></script>
 	<script src="js/main.js"></script>
